--- a/BinaryProjectGit/assets/css/login.css
+++ b/BinaryProjectGit/assets/css/login.css
@@ -7,8 +7,8 @@
     /*background: #0b3e68;*/
     /*background: linear-gradient(to right, #0b3e68, #1e527d);*/
     /*height: 100%;*/
-    background: #0e3554;
-    background: linear-gradient(to right, #031e33, #112b40);
+    background: #141824;
+    /*background: linear-gradient(to right, #031e33, #112b40);*/
     height: 100%;
     display: none;
 }
