--- a/BinaryProjectGit/assets/css/graph.css
+++ b/BinaryProjectGit/assets/css/graph.css
@@ -4,74 +4,82 @@
   /*height: 100%;*/
   /*background: #0e3554;*/
   /*background: linear-gradient(to right, #031e33, #112b40);*/
-  height: 100%;
+  height: 95%;
 
+}
+
+#widget-container{
+  background-color: #26293b !important;
 }
 
 .graph{
-  width: 1100px;
-  height:570px;
+  height: 95%;
 }
 
-@media screen and (max-width: 1300px) {
-  .graph{
-    width: 1000px;
-    height:510px;
-  }
-}
+/*.graph{*/
+/*  width: 1100px;*/
+/*  height:570px;*/
+/*}*/
+
+/*@media screen and (max-width: 1300px) {*/
+/*  .graph{*/
+/*    width: 1000px;*/
+/*    height:510px;*/
+/*  }*/
+/*}*/
 
 
-@media screen and (max-width: 1050px) {
-  .graph{
-    width: 900px;
-    height:510px;
-  }
-}
+/*@media screen and (max-width: 1050px) {*/
+/*  .graph{*/
+/*    width: 900px;*/
+/*    height:510px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 992px) {
-  .graph {
-    width: 800px;
-    height:392px;
-  }
-}
-@media screen and (max-width: 800px) {
-  .graph {
-    width: 700px;
-    height: 335px;
-  }
-}
+/*@media screen and (max-width: 992px) {*/
+/*  .graph {*/
+/*    width: 800px;*/
+/*    height:392px;*/
+/*  }*/
+/*}*/
+/*@media screen and (max-width: 800px) {*/
+/*  .graph {*/
+/*    width: 700px;*/
+/*    height: 335px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 700px) {
-  .graph {
-    width: 600px;
-    height: 279px;
-  }
-}
+/*@media screen and (max-width: 700px) {*/
+/*  .graph {*/
+/*    width: 600px;*/
+/*    height: 279px;*/
+/*  }*/
+/*}*/
 
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .graph {
-    width: 500px;
-    height: 282px;
-  }
-}
-@media screen and (max-width: 500px) {
-  .graph {
-    width: 400px;
-    height: 226px;
-  }
-}
+/*!* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other *!*/
+/*@media screen and (max-width: 600px) {*/
+/*  .graph {*/
+/*    width: 500px;*/
+/*    height: 282px;*/
+/*  }*/
+/*}*/
+/*@media screen and (max-width: 500px) {*/
+/*  .graph {*/
+/*    width: 400px;*/
+/*    height: 226px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 400px) {
-  .graph {
-    width: 300px;
-    height: 170px;
-  }
-}
+/*@media screen and (max-width: 400px) {*/
+/*  .graph {*/
+/*    width: 300px;*/
+/*    height: 170px;*/
+/*  }*/
+/*}*/
 
-@media screen and (max-width: 300px) {
-  .graph {
-    width: 280px;
-    height: 165px;
-  }
-}
+/*@media screen and (max-width: 300px) {*/
+/*  .graph {*/
+/*    width: 280px;*/
+/*    height: 165px;*/
+/*  }*/
+/*}*/
